--- a/flights_demo/dbt_project.yml
+++ b/flights_demo/dbt_project.yml
@@ -33,5 +33,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   flights_demo:
     # Config indicated by + and applies to all files under models/example/
-    example:
+    dimensions:
       +materialized: view
+      +schema: flights_demo_dwh
+    facts:
+      +materialized: view
+      +schema: flights_demo_dwh
+
