--- a/flights_demo/dbt_project.yml
+++ b/flights_demo/dbt_project.yml
@@ -34,9 +34,9 @@ models:
   flights_demo:
     # Config indicated by + and applies to all files under models/example/
     dimensions:
-      +materialized: view
+      +materialized: table
       +schema: flights_demo_dwh
     facts:
-      +materialized: view
+      +materialized: table
       +schema: flights_demo_dwh
 
